# HAUTNetworkGuard

./: .gitignore  Info.plist  LICENSE  README.md  build.sh  create-dmg.sh  uninstall.sh
.github/workflows/: build.yml
OpenWrt/: README.md  install-online.sh  install.sh  uninstall-online.sh  uninstall.sh
OpenWrt/files/etc/config/: haut-network-guard
OpenWrt/files/etc/init.d/: haut-network-guard
OpenWrt/files/usr/lib/haut-network-guard/: api.lua  crypto.lua  main.lua
Sources/: AppDelegate.swift  Config.swift  Encryption.swift  SettingsWindow.swift  StatusBarController.swift  UpdateWindow.swift  main.swift
Windows/: AIREADME.md  CMakeLists.txt  Cargo.toml  README.md  build.bat
Windows-Qt/: CMakeLists.txt
Windows-Qt/resources/: resources.qrc
Windows-Qt/src/: config.cpp  main.cpp  mainwindow.cpp  mainwindow.h  trayicon.cpp  trayicon.h
Windows-Rust-Deprecated/: Cargo.toml  DEPRECATED.md  build.rs
Windows-Rust-Deprecated/src/: config.rs  encryption.rs  main.rs  update.rs
Windows/resources/: app.manifest  app.rc
Windows/src/: Application.cpp  Application.h  api.cpp  api.h  api.rs  config.cpp  config.h  config.rs  encryption.cpp  encryption.h  main.cpp  main.rs  mainwindow.cpp  mainwindow.h  trayicon.cpp  update.rs
Windows/src/config/: AppConfig.h
Windows/src/core/: NetworkStatus.h  SrunAPI.h  SrunEncryption.h  UpdateChecker.h
Windows/src/resource/: manifest.xml  resource.h  resource.rc
Windows/src/ui/: AboutWindow.h  BaseWindow.h  DashboardWindow.cpp  DashboardWindow.h  SettingsWindow.h  TrayIcon.h  UpdateWindow.h
Windows/src/utils/: HttpClient.h  Logger.h  StringUtils.h
macOS/: AIREADME.md  Info.plist  build.sh  cn.ehaut.networkguard.plist  create-dmg.sh  install.sh
macOS/Sources/: AboutWindow.swift  Config.swift  LaunchManager.swift  SettingsWindow.swift  SrunAPI.swift  StatusBarController.swift  UpdateChecker.swift  UpdateWindow.swift
