[package]
name = "haut-network-guard"
version = "1.1.4"
edition = "2021"
authors = ["YellowPeach"]
description = "河南工业大学校园网自动登录工具"

[dependencies]
# Cross-platform GUI
eframe = "0.31"
egui = "0.31"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL encoding
urlencoding = "2.1"

# System tray
tray-icon = "0.19"
muda = "0.15"

# Time handling
chrono = "0.4"

# Open URL in browser
open = "5"

# Windows specific
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
